Version 0.4.1 (2014-12-02)
--------------------------
Updated payload_data schema to 1-0-2 (#55)
Started sending stringified JSON rather than form data in POST requests (#54)
Added Quickstart section to README (#59)

Version 0.4.0 (2014-11-07)
--------------------------
Added set_domain_user_id method (#50)
Added set_ip_address method (#49)
Added set_useragent method (#48)
Added set_network_user_id method (#47)
Updated payload_data to 1-0-1 (#45)
Started using SSL for requests over HTTPS (#52)

Version 0.3.0 (2014-08-29)
--------------------------
Added Subject class (#42)
Added Emitter class (#39)
Added POST support (#32)
Added ability to send events asynchronously (#18)
Added ability to disable contracts (#11)
Made "name" an optional argument to track_screen_view (#38)
Changed default platform to "srv" (#37)
Made all tracker methods chainable (#40)
Added logging (#41)

Version 0.2.0 (2014-07-31)
--------------------------
Wrapped custom contexts in the contexts schema, thanks @ebear! (#25)
Wrapped unstructured event payload in the unstructured_event schema, thanks @ebear! (#22)  
Removed event name and vendors as argument to track_unstruct_event, thanks @ebear! (#19) 
Updated track_screen_view to send valid self-describing screen_view JSON, thanks @ebear! (#21)
Removed event vendor and context vendor from the payload (#35)
Now generates UUID for event_id and sends as eid parameter (#29)
No longer setting and sending tid (#30)
Created new contracts for unstructured events and custom contexts (#34)
Fixed Snowplow capitalization (#28)
Fixed coveralls.io button (#17)
Fixed links in README (#27)

Version 0.1.0 (2014-04-23)
--------------------------
Initial release