@@ -18,3 +18,6 @@ Gemfile.lock
 
 # Added as per http://ryan.mcgeary.org/2011/02/09/vendor-everything-still-applies/
 vendor/bundle/ruby
+
+# Vagrant
+.vagrant
