@@ -1,0 +1,2 @@
+[vagrant]
+127.0.0.1:2222
