@@ -1,0 +1,5 @@
+To get started:
+vagrant ssh
+cd /vagrant
+bundle install
+rspec
